<resources>
    <string name="app_name">GitHub</string>
    <string name="title_favorites">Favorites</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="search_hint">Search user github…</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="github_username">Github Username</string>
    <string name="username_placeholder">Username</string>
    <string name="date_placeholder">21 June 2022</string>
    <string name="description_repository_placeholder">This is sample of repository description</string>
    <string name="not_available_users">Github User Not Available</string>
    <string name="user_detail">User %1s</string>
    <string name="favorite">Favorite</string>
    <string name="name_placeholder">First Last</string>
    <string name="sample_location">Jakarta</string>
    <string name="github_user_work">OpenWISP</string>
    <string name="repository">Repository</string>
    <string name="followers">Followers</string>
    <string name="sample_followers">35</string>
    <string name="sample_repository">132</string>
    <string name="sample_following">142</string>
    <string name="following">Following</string>
    <string name="loading">Loading…</string>
    <string name="unknown">Unknown</string>
    <string name="github_user">Github User</string>
    <string name="went_wrong">Unable to get the data</string>
    <string name="error">Error</string>
    <string name="error_number">-</string>
    <string name="min_lenght_search">Minimum length of search query is 3 characters</string>
    <string name="detail_tab_1">Repository</string>
    <string name="detail_tab_2">Followers</string>
    <string name="detail_tab_3">Following</string>
    <string name="not_available">Not Available</string>
    <string name="favorites">Favorites</string>
    <string name="settings">Settings</string>
    <string name="setting">Setting</string>
    <string name="theme">Theme</string>
    <string name="dark_mode_activate">Enable dark mode theme</string>
    <string name="language_theme">Language</string>
    <string name="btn_language">Language</string>
</resources>