<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                style="@style/LayoutContent"
                android:background="@color/grey_github"
                android:orientation="vertical"
                android:paddingTop="16dp"
                android:paddingBottom="16dp">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user_avatar"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center"
                    app:civ_border_color="@color/white"
                    app:civ_border_width="2dp"
                    tools:src="@tools:sample/avatars" />

                <TextView
                    android:id="@+id/user_name"
                    style="@style/TextContent.Block"
                    android:layout_marginBottom="5dp"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    tools:text="@string/name_placeholder" />

                <TextView
                    android:id="@+id/user_username"
                    style="@style/TextContent.Block.AlignmentCenter"
                    android:layout_marginBottom="10dp"
                    android:fontFamily="sans-serif-light"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    tools:text="@string/github_username" />

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="8dp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp">

                    <TextView
                        android:id="@+id/user_location"
                        style="@style/TextContent.Block"
                        android:drawablePadding="5dp"
                        android:gravity="center"
                        android:textAlignment="center"
                        android:textColor="@android:color/white"
                        app:drawableLeftCompat="@drawable/ic_baseline_location_on_24"
                        tools:text="@string/sample_location" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:id="@+id/user_work"
                        style="@style/TextContent.Block"
                        android:drawablePadding="5dp"
                        android:gravity="center_vertical"
                        android:textColor="@android:color/white"
                        app:drawableLeftCompat="@drawable/ic_baseline_apartment_24"
                        tools:text="@string/github_user_work" />
                </LinearLayout>

                <LinearLayout
                    style="@style/LayoutContent"
                    android:orientation="horizontal"
                    android:paddingLeft="30dp"
                    android:paddingRight="30dp">

                    <LinearLayout
                        style="@style/TextContent.Block.Vertical"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/user_repository"
                            style="@style/TextContent.Block.AlignmentCenter"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            tools:text="@string/sample_repository" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/repository"
                            android:textAlignment="center"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <LinearLayout
                        style="@style/TextContent.Block.Vertical"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/user_followers"
                            style="@style/TextContent.Block.AlignmentCenter"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            tools:text="@string/sample_followers" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/followers"
                            android:textAlignment="center"
                            android:textColor="@color/white" />
                    </LinearLayout>

                    <LinearLayout
                        style="@style/TextContent.Block.Vertical"
                        android:layout_weight="1">

                        <TextView
                            android:id="@+id/user_following"
                            style="@style/TextContent.Block.AlignmentCenter"
                            android:textColor="@color/white"
                            android:textSize="16sp"
                            android:textStyle="bold"
                            tools:text="@string/sample_following" />

                        <TextView
                            style="@style/TextContent.Block.AlignmentCenter"
                            android:text="@string/following"
                            android:textColor="@color/white" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.tabs.TabLayout
                android:id="@+id/tabs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/grey_github"
                app:tabTextColor="@android:color/white" />

            <androidx.viewpager2.widget.ViewPager2
                android:id="@+id/pager"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent" />
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end|bottom"
        android:layout_margin="16dp"
        android:backgroundTint="@color/white"
        android:contentDescription="@string/favorite"
        android:src="@drawable/ic_baseline_star_border_24"
        android:visibility="visible"
        app:borderWidth="2dp" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>